src/test/ui/nll/user-annotations/constant-in-expr-normalize.stderr
error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/constant-in-expr-normalize.rs:18:5
   |
LL |     <() as Foo<'a>>::C
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: ...the reference is valid for the static lifetime...
note: ...but the borrowed content is only valid for the lifetime `'a` as defined here
  --> $DIR/constant-in-expr-normalize.rs:17:8
   |
LL | fn foo<'a>(_: &'a u32) -> &'static u32 {
   |        ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0312`.
